fix(SBPLA-2930): Aligning buttons in dialog and disabling save until ID is checked or reseted

--- a/app/styles/overrides/_sbg-overrides.scss
+++ b/app/styles/overrides/_sbg-overrides.scss
@@ -117,3 +117,8 @@ html {
   line-height: 1.57143em;
 }
 
+/* Overriding input that change's nodes's ID */
+#node-id-input {
+  width: 83%;
+  margin-left: 5px;
+}
